# pileup-gen

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEV-LOG.md  README.md  pyproject.toml
examples/python/: walkthrough.py
historical/: generate-reads.cpp
python/: bindings.cpp
python/examples/: walkthrough.py
src/: accessors.cpp  accessors.hpp  generate-pileup.cpp  generate-pileup.hpp  generate-reads.cpp  generate-reads.hpp  generate_reads.cpp  hts-boundary-types.hpp  hts_ptr_t.hpp  main.cpp  pileup-ops.cpp  pileup-ops.hpp  read-ops.cpp  read-ops.hpp  sim_pile.hpp  subcommand-pileup.hpp  subcommand_exact.hpp  subcommand_pileup.hpp  subcommand_seq.hpp  util.hpp
tests/: test.cpp  test.cpp.old
