[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "htsgen"
version = "0.0.0"
description = "Python bindings for htsgen"
requires-python = ">=3.12"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = []

[tool.scikit-build.cmake.define]
MAKE_PY = "ON"
MAKE_EXE = "OFF"
MAKE_TEST = "OFF"
